Fix style of app tiles
* Now all tiles have same size.
* App name replaces with ellipsis is it's too long.
* App name is shown on mouse enter in case of overflow.


Closes-Bug: #1439294

--- a/muranodashboard/static/muranodashboard/css/catalog.css
+++ b/muranodashboard/static/muranodashboard/css/catalog.css
@@ -79,6 +79,9 @@ h3.heading_switcher a.btn {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .draggable_app img {
@@ -90,13 +93,7 @@ h3.heading_switcher a.btn {
   margin-bottom: 0;
 }
 
-@media (max-width: 916px) {
-  .draggable_app .well, .no_apps.well {
-    min-height: 120px;
-  }
-}
-
-@media (min-width: 916px) and (max-width: 1158px) {
+@media (min-width: 1020px) {
   .draggable_app .well, .no_apps.well {
     min-height: 105px;
   }
